--- a/src/patternfly/base/patternfly-variables.scss
+++ b/src/patternfly/base/patternfly-variables.scss
@@ -6,6 +6,7 @@
 @use "./tokens/tokens-highcontrast-dark" as highcontrast-dark;
 @use "./tokens/tokens-local" as local;
 @use "./tokens/tokens-glass" as glass;
+@use "./tokens/tokens-glass-dark" as glass-dark;
 @use "./tokens/tokens-redhat" as redhat; 
 @use "./tokens/tokens-redhat-dark" as redhat-dark;
 @use "./tokens/tokens-redhat-highcontrast" as redhat-highcontrast;
@@ -34,6 +35,10 @@
 
 :root:where(.pf-v6-theme-glass) {
   @include glass.pf-v6-tokens;
+}
+
+:root:where(.pf-v6-theme-glass.pf-v6-theme-dark) {
+  @include glass-dark.pf-v6-tokens;
 }
 
 :root:where(.pf-v6-theme-redhat) {
