--- a/src/patternfly/components/Masthead/masthead.hbs
+++ b/src/patternfly/components/Masthead/masthead.hbs
@@ -1,5 +1,6 @@
 <{{#if masthead--type}}{{masthead--type}}{{else}}header{{/if}} class="{{pfv}}masthead
   {{setModifiers
+    masthead--IsDisplayInline='pf-m-display-inline'
     masthead--IsDocked='pf-m-docked'
     masthead--modifier=masthead--modifier
   }}"
